# finarg

./: .env.example  .gitignore  LICENSE  README.md  SOUL.md  config.example.yaml  pyproject.toml
finarg/: SOUL.md  __init__.py  __main__.py  app.py  cli.py  constants.py
finarg/agent/: __init__.py  loop.py  prompt_builder.py  session.py
finarg/agent/providers/: anthropic.py  base.py  openai_provider.py
finarg/api/: __init__.py  base.py  bcra.py  ripio_trade.py
finarg/bundled_skills/arca-facturacion/: SKILL.md
finarg/bundled_skills/siradig-deducciones/: SKILL.md
finarg/bundled_skills/siradig-deducciones/references/: selectors.md
finarg/config/: __init__.py  loader.py  secrets.py
finarg/db/: store.py
finarg/tools/: __init__.py  browser.py  file_tools.py  market_data.py  memory.py  registry.py  siradig.py  skill_creator.py  skill_manager.py  skills.py  terminal.py  toolsets.py  transfer.py  visual.py  wallet.py  web.py
finarg/tui/: __init__.py
finarg/tui/screens/: main.py
finarg/tui/themes/: dark.tcss
finarg/tui/widgets/: balance_table.py  braille_chart.py  chat_view.py  status_bar.py  ticker_bar.py
scripts/: install.sh
